--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -78,7 +78,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="749dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/water"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
@@ -103,12 +103,6 @@
                     android:id="@+id/tv_author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-
-                <View
-                    android:id="@+id/divider2"
-                    android:layout_width="match_parent"
-                    android:layout_height="56dp"
-                    android:background="?android:attr/listDivider" />
 
                 <LinearLayout
                     android:id="@+id/ll_action"
@@ -180,58 +174,35 @@
                     </RelativeLayout>
                 </RelativeLayout>
 
+                <View
+                    android:id="@+id/divider2"
+                    android:layout_width="match_parent"
+                    android:layout_height="24dp"
+                    android:background="?android:attr/listDivider" />
+
                 <TextView
                     android:id="@+id/tv_desc"
-                    android:layout_width="387dp"
-                    android:layout_height="97dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="49dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
+                    android:layout_centerVertical="true"
                     android:background="#BCA5EE"
-                    android:fontFamily="sans-serif-condensed-medium"
                     android:gravity="center_horizontal"
-                    android:text="Welcome to WaterWidget, an app that lets you track your water usage and related information while also allowing you to track your conservation and compete in your neighborhood."
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                    android:text="Below is the leaderboard. See where you rank among people near you!" />
 
                 <View
                     android:id="@+id/divider3"
                     android:layout_width="match_parent"
-                    android:layout_height="114dp"
+                    android:layout_height="28dp"
                     android:background="?android:attr/listDivider" />
 
-                <Button
-                    android:id="@+id/create"
-                    android:layout_width="364dp"
-                    android:layout_height="137dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_gravity="center"
-                    android:background="@color/colorAccent"
-                    android:clickable="true"
-                    android:fontFamily="sans-serif-condensed-medium"
-                    android:gravity="center"
-                    android:text="Create Account"
-                    android:textAlignment="center"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                    android:textSize="24sp"
-                    tools:text="Create Account" />
-
-                <View
-                    android:id="@+id/divider"
+                <android.support.v7.widget.RecyclerView
                     android:layout_width="match_parent"
-                    android:layout_height="123dp"
-                    android:background="?android:attr/listDivider" />
-
-                <Button
-                    android:id="@+id/signin"
-                    android:layout_width="364dp"
-                    android:layout_height="137dp"
-                    android:layout_centerHorizontal="true"
-                    android:background="@color/colorAccent"
-                    android:fontFamily="sans-serif-condensed-medium"
-                    android:foregroundGravity="center"
-                    android:gravity="center"
-                    android:text="Sign In"
-                    android:textAlignment="center"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                    android:layout_height="601dp"
+                    android:layout_alignParentStart="true"
+                    android:background="@color/colorPrimaryDark"
+                    tools:listitem="@layout/recycler_view_item" />
 
                 <ImageView
                     android:id="@+id/imageView"
@@ -267,4 +238,10 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider" />
+
+    <Button
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go Back" />
 </android.support.design.widget.CoordinatorLayout>
